 [package]
name = "elara-log"
description = "Project Elara's lightweight logging library for general-purpose use"
license = "Unlicense"
repository = "https://github.com/elaraproject/elara-log-current"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-time = "0.0.5"
