[package]
name = "elara-log-ng" # this name avoids name conflicts on crates.io
description = "Project Elara's lightweight logging library for general-purpose use"
license = "Unlicense"
repository = "https://github.com/elaraproject/elara-log-ng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# rust doesn't allow hyphen in library names
# so elara_log is the name it shows when importing
# it in your code
name = "elara_log"

[dependencies]
sys-time = "0.0.5"
